# shrew-ir

./: ARCHITECTURE.md  Cargo.toml  README.md
src/: ast.rs  error.rs  graph.rs  lexer.rs  lib.rs  lower.rs  optimize.rs  parser.rs  shapes.rs  token.rs  validate.rs
tests/: lower_tests.rs  parser_tests.rs  passes_tests.rs
