[package]
name = "shrew-ir"
description = "Parser and IR for the .sw (Shrew) declarative model format"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
